@@ -4,11 +4,16 @@ import javafx.fxml.FXML;
 import javafx.scene.control.*;
 import javafx.scene.layout.GridPane;
 import javafx.scene.layout.VBox;
+import me.loule.hipopothalous.model.Accounting;
 import me.loule.hipopothalous.model.DatabaseConnection;
+import me.loule.hipopothalous.model.Orders;
+import me.loule.hipopothalous.model.TableModel;
 
 import java.sql.*;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+import java.util.logging.Logger;
 
 class OrderDish {
     private final String name;
@@ -31,6 +36,11 @@ class OrderDish {
     }
 
 
+    /**
+     * @param obj
+     * @return
+     * This function is used to compare two OrderDish objects and check if they are the same
+     */
     @Override
     public boolean equals(Object obj) {
         if (obj instanceof OrderDish orderDish) {
@@ -63,6 +73,10 @@ class OrderDish {
 public class OrdersController {
 
     @FXML
+    ComboBox tableListComboBox;
+
+    List<TableModel> tables = new ArrayList<>();
+    @FXML
     Pagination dishesPagination;
     @FXML
     ListView<OrderDish> lvOrder;
@@ -71,12 +85,17 @@ public class OrdersController {
     @FXML
     Label lblTotalPrice;
     @FXML
-    ChoiceBox<String> tfTableNumber;
+    TextField tfTableNumber = new TextField();
     @FXML
     TextField tfPersonNumber;
     ArrayList<OrderDish> orderDishes = new ArrayList<>();
     List<OrderDish> dishes = new ArrayList<>();
 
+    /**
+     * This function is called when the view is initialized
+     * It will load the dishes from the database and display them in the pagination
+     * It will also initialize the order list view
+     */
     public void initialize() {
         try {
             Connection connection = DatabaseConnection.getConnection();
@@ -94,57 +113,74 @@ public class OrdersController {
                     gridPane.setHgap(10);
                     gridPane.setVgap(10);
 
-                    dishes.stream()
-                            .skip(param * 10)
-                            .limit(10)
-                            .forEach(dish -> {
-                                VBox vBox = new VBox();
-                                vBox.setSpacing(10);
-                                vBox.setPrefWidth(150);
-                                vBox.setPrefHeight(100);
-                                vBox.setStyle("-fx-background-color: #ffffff; -fx-border-color: #000000; -fx-border-width: 2px; -fx-border-radius: 5px; -fx-padding: 10px;");
-                                Label lblName = new Label(dish.getName());
-                                Label lblPrice = new Label(dish.getPrice() + "€");
-                                vBox.getChildren().addAll(lblName, lblPrice);
-                                lblName.prefWidthProperty().bind(vBox.widthProperty());
-                                lblName.prefHeightProperty().bind(vBox.heightProperty());
-                                lblName.setStyle("-fx-alignment: center;");
-                                lblPrice.prefWidthProperty().bind(vBox.widthProperty());
-                                lblPrice.prefHeightProperty().bind(vBox.heightProperty());
-                                lblPrice.setStyle("-fx-alignment: center;");
+                    for (int i = 0; i < dishes.size(); i++) {
+                        if (param * 10 + i < dishes.size()) {
+                            VBox vBox = new VBox();
+                            vBox.setSpacing(10);
+                            vBox.setPrefWidth(150);
+                            vBox.setPrefHeight(100);
+                            vBox.setStyle("-fx-border-color: #000000; -fx-border-width: 2px; -fx-border-radius: 5px; -fx-padding: 10px;-fx-background-color: rgba(0,0,0,0.2)");
+                            Label lblName = new Label(dishes.get(param * 10 + i).getName());
+                            Label lblPrice = new Label(dishes.get(param * 10 + i).getPrice() + "€");
+                            vBox.getChildren().addAll(lblName, lblPrice);
+                            lblName.prefWidthProperty().bind(vBox.widthProperty());
+                            lblName.prefHeightProperty().bind(vBox.heightProperty());
+                            lblName.setStyle("-fx-alignment: center;-fx-font-weight: bold");
+                            lblPrice.prefWidthProperty().bind(vBox.widthProperty());
+                            lblPrice.prefHeightProperty().bind(vBox.heightProperty());
+                            lblPrice.setStyle("-fx-alignment: center; -fx-font-size: 20px; -fx-font-weight: bold");
 
-                                vBox.setOnMouseClicked(event -> {
-                                    OrderDish orderDish = new OrderDish(lblName.getText(), 1, dish.getPrice());
-                                    if (orderDishes.contains(orderDish)) {
-                                        orderDishes.get(orderDishes.indexOf(orderDish)).incrementQuantity();
-                                    } else {
-                                        orderDishes.add(orderDish);
-                                    }
-                                    lvOrder.getItems().clear();
-                                    lvOrder.getItems().addAll(orderDishes);
-                                    String price = String.format("%.2f", orderDishes.stream().mapToDouble(OrderDish::getTotalPrice).sum());
-                                    lblTotalPrice.setText("Total: %s€".formatted(price));
-                                });
+                            int finalI = i;
+                            vBox.setOnMouseClicked(event -> {
+                                OrderDish orderDish = new OrderDish(lblName.getText(), 1, dishes.get(param * 10 + finalI).getPrice());
+                                if (orderDishes.contains(orderDish)) {
+                                    orderDishes.get(orderDishes.indexOf(orderDish)).incrementQuantity();
+                                } else {
+                                    orderDishes.add(orderDish);
+                                }
+                                lvOrder.getItems().clear();
+                                lvOrder.getItems().addAll(orderDishes);
+                                String price = String.format("%.2f", orderDishes.stream().mapToDouble(OrderDish::getTotalPrice).sum());
+                                lblTotalPrice.setText("Total: %s€".formatted(price));
 
-                                gridPane.add(vBox, dishes.indexOf(dish) % 5, dishes.indexOf(dish) / 5);
+
                             });
+                            gridPane.add(vBox, i % 5, i / 5);
+                        }
+                    }
                     return gridPane;
                 });
-
-                // Fetch all table numbers
-                String tableSql = "SELECT * FROM tables";
-                ResultSet tableRs = statement.executeQuery(tableSql);
-                while (tableRs.next()) {
-                    tfTableNumber.getItems().add(tableRs.getString("location"));
-                }
             }
         } catch (SQLException e) {
-            e.printStackTrace();
+            Logger.getLogger(e.getMessage());
         }
+
+        addTableToList();
+        // on listview item press decrement quantity
+        lvOrder.setOnMouseClicked(event1 -> {
+            if (event1.getClickCount() == 2) {
+                OrderDish orderDish1 = lvOrder.getSelectionModel().getSelectedItem();
+                if (orderDish1.getQuantity() > 1) {
+                    orderDish1.decrementQuantity();
+                    lblTotalPrice.setText("Total: " + String.format("%.2f", orderDishes.stream().mapToDouble(OrderDish::getTotalPrice).sum()) + "€");
+                } else {
+                    orderDishes.remove(orderDish1);
+                    lblTotalPrice.setText("Total: " + String.format("%.2f", orderDishes.stream().mapToDouble(OrderDish::getTotalPrice).sum()) + "€");
+                }
+                lvOrder.getItems().clear();
+                lvOrder.getItems().addAll(orderDishes);
+            }
+        });
+
     }
 
+
+    /**
+     * This function is called when the user clicks on the confirm order button
+     * It will check if all the fields are filled in and if they are it will add the order to the database
+     */
     public void addOrder() {
-        if (tfPersonNumber.getText().equals("") || orderDishes.isEmpty()) {
+        if (tfPersonNumber.getText().equals("") || tfTableNumber.getText().equals("") || orderDishes.isEmpty()) {
             Alert alert = new Alert(Alert.AlertType.ERROR);
             alert.setTitle("Error adding order");
             alert.setHeaderText("Error adding order");
@@ -169,6 +205,7 @@ public class OrdersController {
                         preparedStatement.setString(3, tfTableNumber.getValue());
                         preparedStatement.setInt(4, Integer.parseInt(tfPersonNumber.getText()));
                         preparedStatement.setTimestamp(5, timestamp);
+                        Accounting.createAccounting("Gain", Math.round(price * 100.0) / 100.0, timestamp);
                         preparedStatement.executeUpdate();
                     }
 
@@ -186,6 +223,7 @@ public class OrdersController {
                 lvOrder.getItems().clear();
                 lblTotalPrice.setText("Total: 0€");
                 tfPersonNumber.setText("");
+                tfTableNumber.setText("");
                 Alert alert = new Alert(Alert.AlertType.INFORMATION);
                 alert.setTitle("Order added");
                 alert.setHeaderText("Order added");
@@ -200,6 +238,32 @@ public class OrdersController {
                 alert.setContentText("Error while adding order");
                 alert.showAndWait();
             }
+        }
+    }
+
+    //When a table is selected from the combobox, the table number is added to the textfield
+    public void addTableNumber(){
+        for (TableModel tableModel : tables) {
+            if (tableModel.getLocation().equals(tableListComboBox.getValue())){
+                tfTableNumber.setText(String.valueOf(tableModel.getId()));
+            }
+        }
+    }
+
+    public void addTableToList(){
+        //Get all table from teh database and add them to the list
+        try {
+            Connection connection = DatabaseConnection.getConnection();
+            Statement statement = connection.createStatement();
+            ResultSet rs = statement.executeQuery("SELECT * FROM tables");
+            while (rs.next()) {
+                tables.add(new TableModel(rs.getInt("id"),rs.getInt("size"), rs.getString("location"), rs.getTimestamp("date")));
+            }
+            tables.stream()
+                    .sorted(Comparator.comparing(TableModel::getLocation))
+                    .forEach(tableModel -> tableListComboBox.getItems().add(tableModel.getLocation()));
+        } catch (SQLException e) {
+            Logger.getLogger(e.getMessage());
         }
     }
 }
